# effimap

./: .env  .gitignore  .gitmodules  CITATION.cff  Pipfile  README.md  adequacy.py  arguments.py  assess.py  cma_prioritize.py  dataset.py  dissector_prioritize.py  ds_prioritize.py  em_prioritize.py  eval.py  eval_acc.py  extract.py  fuzz_mutants.py  generate_adv_samples.py  generate_mutants.py  gini_prioritize.py  lsa_prioritize.py  measure_rauc.py  metric.py  model.py  mutate.py  pmt_prioritize.py  prima_prioritize.py  prioritize.py  pyproject.toml  random_prioritize.py  search.py  train.py  train_autoencoder.py  train_clfer.py  train_ds_snapshotors.py  train_em_estimator.py  train_lsa_kde.py  train_pmt_ranker.py  train_prima_ranker.py  (+2 more)
data/: noisycifar.patch
datasets/: cifar10.py  cifar100.py  mnist.py  noisycifar.py  nuswide.py  nycre.py  stl10.py  svhn.py  tinyimagenet.py
models/: fc_wrapper.py  hubconf.py  vanilla_vae.py
models/cifar100/: resnet32.py  resnet56.py  vanilla_vae.py  vgg13.py
models/tinyimagenet/: resnet18.py
src/: dataset.py  export.py  extract.py  mutate.py  prioritize.py  utils.py
