[tool.poetry]
name = "incubator-furret"
version = "0.1.0"
description = ""
authors = ["Wsine <weizhy3@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
tqdm = "^4.62.3"
sklearn = "^0.0"
python-dotenv = "^0.19.2"
torch = "1.8.1"
torchvision = "0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
